--- a/index.html
+++ b/index.html
@@ -50,12 +50,9 @@ and worked very shortly as a PostDoctoral Researcher in GIScience in Heidelberg 
 </P>
 
 
-
-<h4>Research Interests</h4>
 <P>
 My research interests focus on:
 </P>
-
 <p><ul>
 
 
@@ -74,11 +71,8 @@ My research interests focus on:
 
 </p>
 
-<P>
-    I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
-</P>
 
-<P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM. Email me your CV or apply <A href="https://www.jobs.manchester.ac.uk/Job/JobDetail?JobId=27858">here</A>.</P>
+<!-- <P>I am also <b>recruiting a 3-year postdoctoral</b> on knowledge graph and ontology in UoM. Email me your CV or apply <A href="https://www.jobs.manchester.ac.uk/Job/JobDetail?JobId=27858">here</A>.</P> -->
 
 <h4>Research Grants and Projects</h4>
 <p><ul>
@@ -101,9 +95,13 @@ My research interests focus on:
     I'm also working on the e-commerce taxonomy curation projection funded by eBay in University of Oxford. I have finished working for several knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
     project of the Alan Turing Institute, and the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">knowledge graph construction</A> project funded by Samsung Research UK.
 </p>
+<P>
+    I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
+</P>
 
-<h4>Academic Services</h4>
+<h4>Academic Services and Activities</h4>
 <p><ul>
+   <li style="margin-bottom:5px">AMS Network on Neurosymbolic AI for Medicine (2024 -- )</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 -- now)</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
 <!--<li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li> -->
@@ -117,8 +115,8 @@ My research interests focus on:
                                     WWW'19, ISWC'20, AAAI'20, ECAI'20, ACL'20, ECML-PKDD'20, WWW'20, AAAI'21, ECML-PKDD'21, CIKM'21,
                                     ESWC'22, ECML-PKDD'22, WWW'22, AAAI'22, IJCAI'22, EMNLP'22, ISWC'22, ACL'22,
                                     OM'23, AAAI'23, IJCAI'23, ISWC'23, EMNLP'23, NeSy'23, CCKS'23, VLDB TaDA'23,
-                                    AAAI'24, WWW'24, NeSy'24, ICDE'24, WWW PromptEng'24, IJCAR'24, OM'24, ISWC'24, VLDB TaDA'24, etc.</li>
-    <li style="margin-bottom:5px">Reviewer of journals: Semantic Web, Journal of Web Semantics, ACM Transactions on the Web, Knowledge-based Systems, World Wide Web, Neurosymbolic Artificial Intelligence, Journal of Biomedical Semantics, Big Data Research, etc.</li>
+                                    AAAI'24, WWW'24, NeSy'24, ICDE'24, WWW PromptEng'24, IJCAR'24, OM'24, ISWC'24, VLDB TaDA'24, LKM'24, etc.</li>
+    <li style="margin-bottom:5px">Reviewer of journals: Semantic Web, Journal of Web Semantics, ACM Transactions on the Web, Knowledge-based Systems, World Wide Web, Neurosymbolic Artificial Intelligence, Journal of Biomedical Semantics, Big Data Research, Transactions on Intelligent Systems and Technology, etc.</li>
 </ul></p>
 
 <h4> Industrial Activities</h4>
@@ -130,7 +128,9 @@ My research interests focus on:
 </ul></p>
 <h4>Selective Journal Publications</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Semantic Web Journal (minor revision). <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Zhuo Chen, Yichi Zhang, Yin Fang, Yuxia Geng, Lingbing Guo, Xiang Chen, Qian Li, Wen Zhang, Jiaoyan Chen, Yushan Zhu, Jiaqi Li, Xiaoze Liu, Jeff Z Pan, Ningyu Zhang, Huajun Chen. "Knowledge Graphs Meet Multi-Modal Learning: A Comprehensive Survey". Under work. <A href="https://arxiv.org/abs/2402.05391">Pre-print</A></li>
+    <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Semantic Web Journal (in press), 2024. <A href="https://arxiv.org/abs/2307.03067">Pre-print</A> </li>
+    <li style="margin-bottom:5px">Lingbing Guo, Zhuo Chen, Jiaoyan Chen, Yichi Zhang, Zequn Sun, Zhongpu Bo, Yin Fang, Xiaoze Liu, Huajun Chen, Wen Zhang. "Distributed representations of entities in open-world knowledge graphs". Knowledge-Based Systems. Volume 290, Page 111582, 2024. <A href="https://doi.org/10.1016/j.knosys.2024.111582">Paper</A> </li>
     <li style="margin-bottom:5px">Jiaoyan Chen, Hang Dong, Janna Hastings, Ernesto Jiménez-Ruiz, Vanessa Lopez, Pierre Monnin, Catia Pesquita, Petr Škoda, Valentina Tamma. "Knowledge Graphs for the Life Sciences: Recent Developments, Challenges and Opportunities". Transactions on Graph Data and Knowledge. Volume 1, Issue 1, 2023. <A href="https://doi.org/10.4230/TGDK.1.1.5">Paper</A></li>
     <li style="margin-bottom:5px">Jeff Z Pan, Simon Razniewski, Jan-Christoph Kalo, Sneha Singhania, Jiaoyan Chen, Stefan Dietze, etc. "Large Language Models and Knowledge Graphs: Opportunities and Challenges". Transactions on Graph Data and Knowledge. Volume 1, Issue 1, 2023. <A href="https://doi.org/10.4230/TGDK.1.1.2">Paper</A> </li>
     <li style="margin-bottom:5px">Norman Paton, Jiaoyan Chen, Zhenyu Wu. "Dataset Discovery and Exploration: A Survey". ACM Computing Surveys. 2023. <A href="https://dl.acm.org/doi/abs/10.1145/3626521">Paper</A> </li>
@@ -155,6 +155,8 @@ My research interests focus on:
     <li style="margin-bottom: 5px">Nan Hu, Jiaoyan Chen, Yike Wu, Guilin Qi, Sheng Bi, Tongtong Wu, Jeff Z Pan "Benchmarking Large Language Models in Complex Question Answering Attribution using Knowledge Graphs". Under work. <A href="https://arxiv.org/abs/2401.14640">Pre-print</A></li>
     <li style="margin-bottom: 5px">Yuan He, Zhangdie Yuan, Jiaoyan Chen, Ian Horrocks. "Language Models as Hierarchy Encoders". Under work. <A href="https://arxiv.org/abs/2401.11374">Pre-print</A></li>
     <li style="margin-bottom: 5px">Yuxia Geng, Jiaoyan Chen, Yuhang Zeng, Zhuo Chen, Wen Zhang, Jeff Z Pan, Yuxiang Wang, Xiaoliang Xu. "Prompting Disentangled Embeddings for Knowledge Graph Completion with Pre-trained Language Model". Under work. <A href="https://arxiv.org/abs/2312.01837">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Dehai Min, Nan Hu, Rihui Jin, Nuo Lin, Jiaoyan Chen, Yongrui Chen, Yu Li, Guilin Qi, Yun Li, Nijun Li, Qianren Wang. "Exploring the Impact of Table-to-Text Methods on Augmenting LLM-based Question Answering with Domain Hybrid Data". NAACL 2024 (Industry Track). <A href="https://arxiv.org/abs/2402.12869">Pre-print</A> </li>
+    <li style="margin-bottom: 5px">Tianzhe Zhao, Jiaoyan Chen, Yanchi Ru, Qika Lin, Yuxia Geng and Jun Liu. "Untargeted Adversarial Attack on Knowledge Graph Embeddings". SIGIR 2024. </li>
     <li style="margin-bottom: 5px">Mathias Jackermeier, Jiaoyan Chen, Ian Horrocks. "Dual Box Embeddings for the Description Logic EL++". The Web Conference 2024. <A href="https://arxiv.org/abs/2301.11118">Pre-print</A>, <A href="https://github.com/KRR-Oxford/BoxSquaredEL">Github</A> </li>
     <li style="margin-bottom: 5px">Jingchuan Shi, Hang Dong, Jiaoyan Chen, Zhe Wu, Ian Horrocks. "Taxonomy Completion via Implicit Concept Insertion". The Web Conference 2024. </li>
     <li style="margin-bottom: 5px">Lingbing Guo, Zhuo Chen, Jiaoyan Chen, Wen Zhang, Huajun Chen. "Revisit and Outstrip Entity Alignment: A Perspective of Generative Models". ICLR 2024. <A href="https://arxiv.org/abs/2305.14651">Pre-print</A> </li>
@@ -204,9 +206,9 @@ My research interests focus on:
 
 
 <h4>Selective Invited Talks and Tutorials</h4>
-<p><ul>
+<p><ul><li style="margin-bottom:5px">Neural-symbolic Knowledge Representation and Reasoning with Ontology and Knowledge Graph Embeddings. Inaugural Seminar at Department of Computer Science, The University of Manchester, 07/2024. <A href="files/Inaugural_02_2024.pdf">Slides</A></li>
 <li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-ijcai-2023/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in IJCAI 2023 (August 19 - 25). Yuxia Geng, Zhuo Chen, Jiaoyan Chen, Wen Zhang, Jeff Z. Pan. </li>
-<li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". Shanghai Jiaotong University (Information System Group). Shanghai, China. 19/05/2023. <A href="https://github.com/ChenJiaoyan/ChenJiaoyan.github.io/blob/main/files/SH_Jiaotong_19052023.pdf">Slides.</A>
+<li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". Shanghai Jiaotong University (Information System Group). Shanghai, China. 19/05/2023. <A href="files/SH_Jiaotong_19052023.pdf">Slides.</A>
 <li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-iswc-2022/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in ISWC 2022 (October 23 - 27). Jiaoyan Chen, Yuxia Geng, Yufeng Huang, Huajun Chen. </li>
 <li style="margin-bottom:5px">"Knowledge Graphs: Theory & Applications". eBay, California, USA (online). In conjunction with Prof. Ian Horrocks. 09/2021. <A href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/20210916-eBay-merged.pdf">Slides.</A>
 <li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". 2021年江苏省研究生地理大数据与空间智能暑期学校 (Summer School on Big Geo Data and AI for Graduate Student, Jiangsu Province, 2021), online, China. 08/2021. <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/Jiangsu_Geo_082021.pdf">Slide</a></li>
