--- a/index.html
+++ b/index.html
@@ -72,15 +72,18 @@ Research Interests
 <p><ul>
 
     <li style="margin-bottom:5px">
+        Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 46.5K GBP, 06/2024 - 12/2024, PI.
+    </li>
+    <li style="margin-bottom:5px">
         EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
+    </li>
+    <li style="margin-bottom:5px">
+        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 19K GBP, 11/2022 - 04/2023, PI.
     </li>
      <li style="margin-bottom:5px">
         EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 1.1M GBP, 12/2021 - 11/2024, Research Co-Investigator (PI: Ian Horrocks).
     </li>
 
-    <li style="margin-bottom:5px">
-        Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 19K GBP, 11/2022 - 04/2023, PI.
-    </li>
 
     </ul>
 </p>
