--- a/publications.html
+++ b/publications.html
@@ -8,6 +8,7 @@
 
 <h4>Selective Journal Publications</h4>
 <p><ul>
+    <li style="margin-bottom:5px">Jiaoyan Chen, Olga Mashkova, Fernando Zhapa-Camacho, Robert Hoehndorf, Yuan He, Ian Horrocks. "Ontology Embedding: A Survey of Methods, Applications and Resources". Under work. <A href="https://arxiv.org/pdf/2406.10964v1">Pre-print</A></li>
     <li style="margin-bottom:5px">Zhuo Chen, Yichi Zhang, Yin Fang, Yuxia Geng, Lingbing Guo, Xiang Chen, Qian Li, Wen Zhang, Jiaoyan Chen, Yushan Zhu, Jiaqi Li, Xiaoze Liu, Jeff Z Pan, Ningyu Zhang, Huajun Chen. "Knowledge Graphs Meet Multi-Modal Learning: A Comprehensive Survey". Under work. <A href="https://arxiv.org/abs/2402.05391">Pre-print</A></li>
     <li style="margin-bottom:5px">Wen Zhang, Yajing Xu, Peng Ye, Zhiwei Huang, Zezhong Xu, Jiaoyan Chen, Jeff Z Pan, Huajun Chen "Start From Zero: Triple Set Prediction for Automatic Knowledge Graph Completion". IEEE Transactions on Knowledge and Data Engineering, 2024. <A href="https://ieeexplore.ieee.org/abstract/document/10529617">Paper</A> </li>
     <li style="margin-bottom:5px">Yuan He, Jiaoyan Chen, Hang Dong, Ian Horrocks, Carlo Allocca, Taehun Kim, Brahmananda Sapkota. "DeepOnto: A Python Package for Ontology Engineering with Deep Learning". Semantic Web Journal, 2024. <A href="https://arxiv.org/abs/2307.03067">Pre-print</A>, <A href="https://github.com/KRR-Oxford/DeepOnto">System</A> </li>
