--- a/index.html
+++ b/index.html
@@ -108,12 +108,14 @@ Research Interests
 <li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022, 2023).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
 <li style="margin-bottom:5px">Senior PC: IJCAI'20, IJCAI'21, CIKM'23, ESWC'23</li>
-<li style="margin-bottom:5px">PC/reviewer: ISWC'2017, WWW'2017, AAAI'17, ISWC'18, IJCAI'19, ISWC'19,
+<li style="margin-bottom:5px">PC: ISWC'2017, WWW'2017, AAAI'17, ISWC'18, IJCAI'19, ISWC'19,
                                     WWW'19, ISWC'20, AAAI'20, ECAI'20, ACL'20, ECML-PKDD'20, WWW'20, AAAI'21, ECML-PKDD'21, CIKM'21,
                                     ESWC'22, ECML-PKDD'22, WWW'22, AAAI'22, IJCAI'22, EMNLP'22, ISWC'22, ACL'22,
                                     OM'23, AAAI'23, IJCAI'23, ISWC'23, EMNLP'23, NeSy'23, CCKS'23, VLDB TaDA'23,
                                     AAAI'24, WWW'24, NeSy'24, ICDE'24, WWW PromptEng'24, IJCAR'24, OM'24, ISWC'24, VLDB TaDA'24, LKM'24, COLM'24.</li>
     <li style="margin-bottom:5px">Reviewer of journals: Semantic Web, Journal of Web Semantics, ACM Transactions on the Web, Knowledge-based Systems, World Wide Web, Neurosymbolic Artificial Intelligence, Journal of Biomedical Semantics, Big Data Research, Transactions on Intelligent Systems and Technology, etc.</li>
+     <li style="margin-bottom:5px">Proposal review: Royal Academy of Engineering, German Research Foundation (DFG), EPSRC, etc.</li>
+    <li style="margin-bottom:5px">PhD Thesis Examination: 4</li>
 </ul></p>
 
 <h4> Industrial Activities</h4>
