--- a/Talks.html
+++ b/Talks.html
@@ -8,6 +8,7 @@
 
 <h4>Selective Invited Talks and Tutorials</h4>
 <p><ul>
+    <li style="margin-bottom:5px">Knowledge Engineering meets (Large) Language Models. Amazon Scholar Report. 12/07/2024. Online.</li>
 <li style="margin-bottom:5px">Neural-symbolic Knowledge Representation and Reasoning with Ontology and Knowledge Graph Embeddings. Seminar at King Abdullah University of Science and Technology (KAUST), 04/2024. <A href="files/Seminar_KAUST_04_2024.pdf">Slides</A></li>
 <li style="margin-bottom:5px">Neural-symbolic Knowledge Representation and Reasoning with Ontology and Knowledge Graph Embeddings. Inaugural Seminar at Department of Computer Science, The University of Manchester, 07/2024. <A href="files/Inaugural_02_2024.pdf">Slides</A></li>
 <li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-ijcai-2023/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in IJCAI 2023 (August 19 - 25). </li>
