--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a></p>
+      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <a href="./files/CV_Jiaoyan%20July%202024.pdf">CV</a></p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -72,7 +72,7 @@ Research Interests
 <p><ul>
 
     <li style="margin-bottom:5px">
-        Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 39.5K GBP, 06/2024 - 12/2024, PI.
+        Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 39.8K GBP, 09/2024 - 02/2025, PI.
     </li>
     <li style="margin-bottom:5px">
         EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
@@ -83,40 +83,30 @@ Research Interests
      <li style="margin-bottom:5px">
         EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 1.1M GBP, 12/2021 - 11/2024, Research Co-Investigator (PI: Ian Horrocks).
     </li>
+    <li style="margin-bottom:5px">
+        As a researcher, I'm also working on the e-commerce taxonomy curation projection funded by eBay in University of Oxford, and have finished working for several knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
+    project of the Alan Turing Institute, and the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">knowledge graph construction</A> project funded by Samsung Research UK.
+    </li>
 
 
     </ul>
 </p>
 
-<p>
-    I'm also working on the e-commerce taxonomy curation projection funded by eBay in University of Oxford. I have finished working for several knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
-    project of the Alan Turing Institute, and the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">knowledge graph construction</A> project funded by Samsung Research UK.
-</p>
 <P>
-    I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
+   &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
 </P>
 
 <h4>Academic Services and Activities</h4>
 <p><ul>
-   <li style="margin-bottom:5px">AMS Network on Neurosymbolic AI for Medicine (2024 -- )</li>
+   <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 -- )</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 -- now)</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
-<!--<li style="margin-bottom:5px">Editor Board of Data Intelligence Journal (2021 -- now).</li> -->
+    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 -- now). </li>
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
-<li style="margin-bottom:5px">Organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC 2022, 2023. </li>
-<li style="margin-bottom:5px">Guest Editor of the Journal of Web Semantics special issue <A href="https://www.journals.elsevier.com/journal-of-web-semantics/call-for-papers/automating-knowledge-graph-construction">"Automating Knowledge Graph Construction"</A>.</li>
-<li style="margin-bottom:5px">Organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019, 2020, 2021, 2022, 2023).</li>
+<li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 -- 2023).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
-<li style="margin-bottom:5px">Senior PC: IJCAI'20, IJCAI'21, CIKM'23, ESWC'23</li>
-<li style="margin-bottom:5px">PC: ISWC'2017, WWW'2017, AAAI'17, ISWC'18, IJCAI'19, ISWC'19,
-                                    WWW'19, ISWC'20, AAAI'20, ECAI'20, ACL'20, ECML-PKDD'20, WWW'20, AAAI'21, ECML-PKDD'21, CIKM'21,
-                                    ESWC'22, ECML-PKDD'22, WWW'22, AAAI'22, IJCAI'22, EMNLP'22, ISWC'22, ACL'22,
-                                    OM'23, AAAI'23, IJCAI'23, ISWC'23, EMNLP'23, NeSy'23, CCKS'23, VLDB TaDA'23,
-                                    AAAI'24, WWW'24, NeSy'24, ICDE'24, WWW PromptEng'24, IJCAR'24, OM'24, ISWC'24, VLDB TaDA'24, LKM'24, COLM'24.</li>
-    <li style="margin-bottom:5px">Reviewer of journals: Semantic Web, Journal of Web Semantics, ACM Transactions on the Web, Knowledge-based Systems, World Wide Web, Neurosymbolic Artificial Intelligence, Journal of Biomedical Semantics, Big Data Research, Transactions on Intelligent Systems and Technology, etc.</li>
-     <li style="margin-bottom:5px">Proposal review: Royal Academy of Engineering, German Research Foundation (DFG), EPSRC, etc.</li>
-    <li style="margin-bottom:5px">PhD Thesis Examination: 4</li>
 </ul></p>
+<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan%20July%202024.pdf">CV</a> for all I have served.</p>
 
 <h4> Industrial Activities</h4>
 <p><ul>
@@ -127,7 +117,7 @@ Research Interests
 </ul></p>
 
 <h4>Publications</h4>
-<p><A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./publications.html">Selected</A></p>
+<p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./publications.html">Selected</A></p>
 
 <h4>Softwares</h4>
 <p><ul>
@@ -158,9 +148,9 @@ Research Interests
 <li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
 </ul></p>
 
-<h4>Supervision</h4>
+<h4>Research Supervision</h4>
 <p><ul>
-    <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 07/2024 - )</li>
+    <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
     <li style="margin-bottom:5px">Ian Hyland (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
    <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
@@ -172,10 +162,8 @@ Research Interests
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
     <li style="margin-bottom:5px"><A href="https://sirius-labs.no/erik-bryhn-myklebust-phd-candidate/">Erik Bryhn Myklebust</A> (PhD, NIVA & SIRIUS, University of OSLO, 2019 - 2022) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Mathias Jackermeier (MSc, Department of Computer Science, University of Oxford, 2022)</li>
-    <li style="margin-bottom:5px">Zhengyi Xiao (MSc, Department of Computer Science, University of Oxford, 2022)</li>
     <li style="margin-bottom:5px">Yan Zhou (MSc, GIScience, University of Heidelberg, 2016 - 2017)</li>
 </ul></p>
-<p><p> &nbsp  &nbsp  &nbsp There is long list of MSc and UG students ...</p>
 </br></br>
 </div>
 </div>
