--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Research Interests
 
 <h4>Academic Services and Activities</h4>
 <p><ul>
-   <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 -- )</li>
+   <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 -- now)</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 -- now)</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
     <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 -- now). </li>
