--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <a href="./files/CV_Jiaoyan%20July%202024.pdf">CV</a></p>
+      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <a href="./files/CV_Jiaoyan_July_2024.pdf">CV</a></p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -106,7 +106,7 @@ Research Interests
 <li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 -- 2023).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
 </ul></p>
-<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan%20July%202024.pdf">CV</a> for all I have served.</p>
+<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan_July_2024.pdf">CV</a> for all I have served.</p>
 
 <h4> Industrial Activities</h4>
 <p><ul>
