--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <a href="./files/CV_Jiaoyan_July_2024.pdf">CV</a></p>
+      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a> </p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -126,16 +126,7 @@ Research Interests
 </ul></p>
 
 <h4>Invited Talks and Tutorials</h4>
-<p><ul>
-<li style="margin-bottom:5px">Neural-symbolic Knowledge Representation and Reasoning with Ontology and Knowledge Graph Embeddings. Seminar at King Abdullah University of Science and Technology (KAUST), 04/2024. <A href="files/Seminar_KAUST_04_2024.pdf">Slides</A></li>
-<li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-ijcai-2023/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in IJCAI 2023 (August 19 - 25). </li>
-<li style="margin-bottom:5px">"Knowledge Graph Construction, Curation and Its Machine Learning Applications". Shanghai Jiaotong University. Shanghai, China. 19/05/2023. <A href="files/SH_Jiaotong_19052023.pdf">Slides.</A>
-<li style="margin-bottom:5px"><A href="https://china-uk-zsl.github.io/kg-zsl-tutorial-iswc-2022/">Knowledge-aware Zero-shot Learning (K-ZSL): Concepts, Methods and Resources</A>. Tutorial in ISWC 2022 (October 23 - 27). </li>
-<li style="margin-bottom:5px">"Knowledge Graphs: Theory & Applications". eBay, California, USA (online). In conjunction with Prof. Ian Horrocks. 09/2021. <A href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/20210916-eBay-merged.pdf">Slides.</A>
-<li style="margin-bottom:5px">"Knowledge Graph Curation with Deep Learning and Semantic Reasoning". Tencent Technology, Shenzhen, China, 10/2019. <a href="https://www.cs.ox.ac.uk/isg/people/jiaoyan.chen/files/Tencent_Oct24_2019.pdf">Slides</a></li>
-</ul></p>
-
-<p> &nbsp  &nbsp  &nbsp<A href="./Talks.html">Click</A> to see more</p>
+<p> &nbsp  &nbsp  &nbsp<A href="./Talks.html">Selected</A>, more in <A href="./files/CV_Jiaoyan_July_2024.pdf">CV</A></p>
 
 <h4>Teaching</h4>
 <p><ul>
