--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a> </p>
+      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <A href="./files/CV_Jiaoyan_July_2024.pdf">CV</A> </p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -32,7 +32,6 @@
 </div> <!-- /vcard -->
 
 
-</div> <!-- /callouts -->
 
 
 <h4>Biography</h4>
