--- a/index.html
+++ b/index.html
@@ -97,15 +97,16 @@ Research Interests
 
 <h4>Academic Services and Activities</h4>
 <p><ul>
-   <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 -- now)</li>
-    <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 -- now)</li>
-    <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 -- now).</li>
-    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 -- now). </li>
-<li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 -- 2023).</li>
-<li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 -- 2023).</li>
+   <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
+    <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
+    <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 - ).</li>
+    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 - ). </li>
+<li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 - 2023).</li>
+<li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 - 2023).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
+    <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), AAAI, IJCAI, ESWC, CIKM, ACL, etc.</li>
 </ul></p>
-<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan_July_2024.pdf">CV</a> for all I have served.</p>
+<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan_July_2024.pdf">CV</a> for more I have served.</p>
 
 <h4> Industrial Activities</h4>
 <p><ul>
@@ -118,24 +119,25 @@ Research Interests
 <h4>Publications</h4>
 <p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./publications.html">Selected</A></p>
 
+<h4>Invited Talks and Tutorials</h4>
+<p> &nbsp  &nbsp  &nbsp<A href="./Talks.html">Selected</A></p>
+
 <h4>Softwares</h4>
 <p><ul>
     <li style="margin-bottom:5px"><A href="https://github.com/KRR-Oxford/OWL2Vec-Star">OWL2Vec*</A> (an OWL ontology embedding framework) </li>
     <li style="margin-bottom:5px"><A href="https://github.com/KRR-Oxford/DeepOnto">DeepOnto</A> (a library for ontology engineering with language models and machine learning) </li>
 </ul></p>
 
-<h4>Invited Talks and Tutorials</h4>
-<p> &nbsp  &nbsp  &nbsp<A href="./Talks.html">Selected</A>, more in <A href="./files/CV_Jiaoyan_July_2024.pdf">CV</A></p>
 
 <h4>Teaching</h4>
 <p><ul>
-    <li style="margin-bottom:5px">"Neural-symbolic Knowledge Representation and Reasoning". 2nd European Summer School on Artificial Intelligence (ESSAI 2024). July 2024. </li>
+    <li style="margin-bottom:5px">"Neural-symbolic Knowledge Representation and Reasoning". 2nd European Summer School on Artificial Intelligence (<A href="https://essai2024.di.uoa.gr/">ESSAI</A>). Athens, Greece. July 2024. </li>
     <li style="margin-bottom:5px">"Data Engineering (COMP60711)". Department of Computer Science, The University of Manchester. 2024-2025. </li>
     <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024, 2024-2025. </li>
     <li style="margin-bottom:5px">"Knowledge Graph (English)". Southeast University. Guest Lecture. Summer 2023. </li>
 <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/teaching/courses/2021-2022/ai/">"Artificial Intelligence"</A>. Department of Computer Science, University of Oxford. Group Class Teaching. Hilary Term 2022. </li>
 <li style="margin-bottom:5px">"Knowledge Representation and Reasoning (English)". Southeast University. Guest Lecture. 2021-2022, 2022-2023. </li>
-<li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to the course of CS551J Knowledge Representation and Reasoning by Jeff Z. Pan)</li>
+<li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to CS551J Knowledge Representation and Reasoning)</li>
 </ul></p>
 
 <h4>Research Supervision</h4>
@@ -145,7 +147,7 @@ Research Interests
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
    <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 09/2022 - )</li>
-    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - 12/2025)</li>
+    <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - )</li>
     <br/>
     <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/people/yuan.he/">Yuan He</A> (PhD, Department of Computer Science, University of Oxford, 2020 - 2024)</li>
