--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Research Interests
 
 <h4>Teaching</h4>
 <p><ul>
-    <li style="margin-bottom:5px">"Neural-symbolic Knowledge Representation and Reasoning". 2nd European Summer School on Artificial Intelligence (<A href="https://essai2024.di.uoa.gr/">ESSAI</A>). Athens, Greece. July 2024. <A href="./files/NeSy_KR_ESSAI2024.zip">Slides</A></li>
+    <li style="margin-bottom:5px">"Neural-symbolic Knowledge Representation and Reasoning". 2nd European Summer School on Artificial Intelligence (<A href="https://essai2024.di.uoa.gr/">ESSAI</A>). Athens, Greece. July 2024. <A href="./files/NeSy_KR_ESSAI2024.zip">Slides</A>. <A href="https://github.com/ChenJiaoyan/teaching/tree/main/uom">Contents</A>.</li>
     <li style="margin-bottom:5px">"Data Engineering (COMP60711)". Department of Computer Science, The University of Manchester. 2024-2025. </li>
     <li style="margin-bottom:5px">"Querying Data on the Web (COMP62421)". Department of Computer Science, The University of Manchester. 2023-2024, 2024-2025. </li>
     <li style="margin-bottom:5px">"Knowledge Graph (English)". Southeast University. Guest Lecture. Summer 2023. </li>
