--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Research Interests
 <h4>Research Grants and Projects</h4>
 <p><ul>
     <li style="margin-bottom:5px">
-        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 9K GBP + 14K CAD, 10/2024 - 03/2026, PI with Dr. Jia Xue from University of Toronto.
+        The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 9K GBP + 14K CAD, 10/2024 - 03/2026, PI with Jia Xue from University of Toronto.
     </li>
     <li style="margin-bottom:5px">
         Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 30.6K GBP, 07/2024 - 01/2025, PI.
