--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Research Interests
 <li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to CS551J Knowledge Representation and Reasoning)</li>
 </ul></p>
 
-<h4>Research Supervision</h4>
+<h4>Students / Research Associates</h4>
 <p><ul>
     <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
     <li style="margin-bottom:5px">Ian Hyland (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
