--- a/index.html
+++ b/index.html
@@ -145,13 +145,16 @@ Research Interests
 <h4>Students / Research Associates</h4>
 <p><ul>
     <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
-    <li style="margin-bottom:5px">Ian Hyland (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
+    <li style="margin-bottom:5px">Ian Hyland (part-time PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
    <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 09/2022 - )</li>
     <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - )</li>
-    <br/>
+    </ul></p>
+<p>
+    &nbsp  &nbsp  &nbsp <b>(past)</b>
+    <ul>
     <li style="margin-bottom:5px"><A href="https://www.cs.ox.ac.uk/people/yuan.he/">Yuan He</A> (PhD, Department of Computer Science, University of Oxford, 2020 - 2024)</li>
     <li style="margin-bottom:5px"><A href="https://genggengcss.github.io/">Yuxia Geng</A> (PhD, College of Computer Science and Technology, Zhejiang University, 2018 - 2023)</li>
     <li style="margin-bottom:5px"><A href="https://sirius-labs.no/erik-bryhn-myklebust-phd-candidate/">Erik Bryhn Myklebust</A> (PhD, NIVA & SIRIUS, University of OSLO, 2019 - 2022) (external co-supervisor)</li>
