--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <A href="./files/CV_Jiaoyan_July_2024.pdf">CV</A> </p>
+      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <A href="./files/CV_Jiaoyan.pdf">CV</A> </p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -108,7 +108,7 @@ Research Interests
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
     <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), AAAI, IJCAI, ESWC, CIKM, ACL, etc.</li>
 </ul></p>
-<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan_July_2024.pdf">CV</a> for more I have served.</p>
+<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan.pdf">CV</a> for more I have served.</p>
 
 <h4> Industrial Activities</h4>
 <p><ul>
@@ -142,7 +142,7 @@ Research Interests
 <li style="margin-bottom:5px">"Augmenting Machine Learning with Knowledge Base", University of Aberdeen, 01/2018 (Guest Lecture to CS551J Knowledge Representation and Reasoning)</li>
 </ul></p>
 
-<h4>Students / Research Associates</h4>
+<h4>Research Students / Associates (Team)</h4>
 <p><ul>
     <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
