--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ Research Interests
 <h4>Research Students / Associates (Team)</h4>
 <p><ul>
     <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
+    <li style="margin-bottom:5px">Hanhua Hong (PhD, Department of Computer Science, The University of Manchester, 09/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
     <li style="margin-bottom:5px">Ian Hyland (part-time PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
    <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
