--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ Research Interests
    <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 - ).</li>
+    <li style="margin-bottom:5px">Editor of Data Intelligence (2021 - ).</li>
     <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 - ). </li>
 <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 - 2023).</li>
 <li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 - 2023).</li>
