--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
 
 
 <P>
-    I'm a Lecturer (Assistant Professor) in Department of Computer Science, The University of Manchester, and also work as a part-time Senior Researcher in Department of Computer Science, University of Oxford.
+    I'm a Lecturer (Assistant Professor) in Department of Computer Science, The University of Manchester, and a part-time Senior Researcher in Department of Computer Science, University of Oxford.
+    Before that, I was a full-time Senior Researcher in University of Oxford (with <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>), and worked shortly as a postdoctoral in Heidelberg University.
+    My PhD and bachelor degree were both awarded in Zhejiang University on Computer Science and Technology.
+    I was a visiting PhD student of Department of Informatics, Zurich University from 2014 to 2015.
 </P>
 
-<P>
-Before that, I was a full-time Senior Researcher at Department of Computer Science, University of Oxford (in the group of <A href="http://www.cs.ox.ac.uk/ian.horrocks/">Prof. Ian Horrocks</A>),
-and worked very shortly as a PostDoctoral Researcher in GIScience in Heidelberg University.
-    My Ph.D in Computer Science and Technology was awarded in Zhejiang University in 2016 for the research on learning and reasoning for spatio-temporal data, and my Bachelor degree in Computer Science and Technology was awarded in Zhejiang University as well in 2011.
-    I was a visiting student of Department of Informatics, Zurich University from 2014 to 2015.
-</P>
+    <h4 style="color: #d90909;">Latest News!</h4>
+    <p>
+        <ul>
+    <li style="margin-bottom:5px">25/09/2024: Two papers accepted in NeurIPS'24</li>
+    <li style="margin-bottom:5px">20/09/2024: One paper accepted in EMNLP'24</li>
+    <li style="margin-bottom:5px">20/09/2024: Attending CCKS-IJCKG 2024 in Chongqing, China </li>
+    <li style="margin-bottom:5px">19/08/2024: One paper accepted in ACM Transactions on the Web </li>
 
+</ul>
+    </p>
 
 <h4>
 Research Interests
