--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
+    <li style="margin-bottom:5px">31/10/2024: To visit University of Stuttgart for presentation in a workshop</li>
     <li style="margin-bottom:5px">25/09/2024: Two papers accepted in NeurIPS'24</li>
     <li style="margin-bottom:5px">20/09/2024: One paper accepted in EMNLP'24</li>
     <li style="margin-bottom:5px">20/09/2024: Attending CCKS-IJCKG 2024 in Chongqing, China </li>
