--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     <h4 style="color: #d90909;">Latest News!</h4>
     <p>
         <ul>
-    <li style="margin-bottom:5px">31/10/2024: To visit University of Stuttgart for presentation in a workshop</li>
+    <li style="margin-bottom:5px">11/11/2024: Attend EMNLP'24</li>
+    <li style="margin-bottom:5px">31/10/2024: Visit University of Stuttgart for invited talk</li>
     <li style="margin-bottom:5px">25/09/2024: Two papers accepted in NeurIPS'24</li>
     <li style="margin-bottom:5px">20/09/2024: One paper accepted in EMNLP'24</li>
     <li style="margin-bottom:5px">20/09/2024: Attending CCKS-IJCKG 2024 in Chongqing, China </li>
@@ -127,7 +128,7 @@ Research Interests
 </ul></p>
 
 <h4>Publications</h4>
-<p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./publications.html">Selected</A></p>
+<p>&nbsp  &nbsp  &nbsp <A href="https://scholar.google.co.uk/citations?hl=en&user=5Cy4z8wAAAAJ&view_op=list_works">Google Scholar</A>, <A href="https://dblp.org/pid/56/8110-1.html">DBLP</A>, <A href="./publications.html">Selected</A></p>
 
 <h4>Invited Talks and Tutorials</h4>
 <p> &nbsp  &nbsp  &nbsp<A href="./Talks.html">Selected</A></p>
