--- a/Talks.html
+++ b/Talks.html
@@ -8,6 +8,7 @@
 
 <h4>Selective Invited Talks and Tutorials</h4>
 <p><ul>
+    <li style="margin-bottom:5px">Integrating Knowledge Graphs and Large Language Models for Advancing Scientific Research. Tutorial at Learning on Graph Conference (LoG), 26/11/2024. <A href="files/LoG_Tutorial.pdf">Slides</A></li>
     <li style="margin-bottom:5px">Data Intensive Question Answering with Large Language Models. Invited Talk at University of Stuttgart. 31/10/2024. <A href="files/QA_LLM_Stuttgart_10_2024.pdf">Slides</A></li>
     <li style="margin-bottom:5px">Knowledge Engineering meets (Large) Language Models. Amazon Search Research Talk Series. 12/07/2024. <A href="files/Amazon_Search_Research_Talk_July_2024.pdf">Slides</A></li>
 <li style="margin-bottom:5px">Neural-symbolic Knowledge Representation and Reasoning with Ontology and Knowledge Graph Embeddings. Seminar at King Abdullah University of Science and Technology (KAUST), 04/2024. <A href="files/Seminar_KAUST_04_2024.pdf">Slides</A></li>
