--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p><span class="extended-address">Office: 2.91, Kilburn Building</span>, <span class="street-address">Oxford Road</span>,
 <span class="locality">Manchester</span> <span class="postal-code">M13 9PL</span> <span>UK</span></p>
       <p>Email: firstname.lastname@manchester.ac.uk, firstname4ai@gmail.com</p>
-      <p><a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">UoM Website</a>, <A href="./files/CV_Jiaoyan.pdf">CV</A> </p>
+      <p><a href="https://www.research.manchester.ac.uk/portal/jiaoyan.chen.html">University Homepage</a>, <a href="https://twitter.com/ChenJiaoyan1">Twitter</a>, <a href="https://www.linkedin.com/in/jiaoyan-chen-00822b26/">LinkedIn</a>, <a href="https://bsky.app/profile/jiaoyanchen.bsky.social">BlueSky</a>, <A href="./files/CV_Jiaoyan.pdf">CV</A> </p>
       </div>
       <!--<h4>Tools</h4>
 
@@ -51,11 +51,16 @@
     <li style="margin-bottom:5px">31/10/2024: Visit University of Stuttgart for invited talk</li>
     <li style="margin-bottom:5px">25/09/2024: Two papers accepted in NeurIPS'24</li>
     <li style="margin-bottom:5px">20/09/2024: One paper accepted in EMNLP'24</li>
+    <!--
     <li style="margin-bottom:5px">20/09/2024: Attending CCKS-IJCKG 2024 in Chongqing, China </li>
     <li style="margin-bottom:5px">19/08/2024: One paper accepted in ACM Transactions on the Web </li>
+    -->
 
 </ul>
     </p>
+    <P>
+        &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
+    </P>
 
 <h4>
 Research Interests
@@ -78,49 +83,44 @@ Research Interests
 <h4>Research Grants and Projects</h4>
 <p><ul>
     <li style="margin-bottom:5px">
+        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
+    </li>
+     <li style="margin-bottom:5px">
+        EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 1.1M GBP, 12/2021 - 05/2025, Research Co-Investigator.
+    </li>
+    <li style="margin-bottom:5px">
         The Manchester-Melbourne-Toronto (MMT) Research Fund, "AI-Driven Solutions for Child Protection: Utilizing LLMs and Knowledge Graph" (collaborative research initiatives), 9K GBP + 14K CAD, 10/2024 - 03/2026, PI with Jia Xue from University of Toronto.
     </li>
     <li style="margin-bottom:5px">
         Turing Innovation Catalyst Manchester (TICM) funded Collaborative R&D Project "Multi-modal Semantic Search with Ontologies and Modern AI Techniques", 30.6K GBP, 07/2024 - 01/2025, PI.
     </li>
     <li style="margin-bottom:5px">
-        EPSRC New Investigator Award "OntoEm: Semantic Embeddings for Ontologies" (EP/Y017706/1), 427.9K GBP, 12/2023 - 11/2026, PI.
-    </li>
-    <li style="margin-bottom:5px">
         Turing-Manchester Feasibility Project "Knowledge Graph for Explainability, Guidance and Human-in-the-loop in Machine Learning", 19K GBP, 11/2022 - 04/2023, PI.
     </li>
-     <li style="margin-bottom:5px">
-        EPSRC "ConCur: Knowledge Graph Construction and Curation" (EP/V050869/1), 1.1M GBP, 12/2021 - 11/2024, Research Co-Investigator (PI: Ian Horrocks).
-    </li>
+    <!--
     <li style="margin-bottom:5px">
         As a researcher, I'm also working on the e-commerce taxonomy curation projection funded by eBay in University of Oxford, and have finished working for several knowledge graph related projects such as the <A href="https://www.turing.ac.uk/research/research-projects/artificial-intelligence-data-analytics-aida">AIDA</A>
     project of the Alan Turing Institute, and the <A href="http://www.cs.ox.ac.uk/isg/projects/Samsung/">knowledge graph construction</A> project funded by Samsung Research UK.
     </li>
+    -->
 
 
     </ul>
 </p>
 
-<P>
-   &nbsp  &nbsp  &nbsp I am <b>recruiting PhD students</b> in UoM. Please email your CV to me or directly apply my projects on our <A href="https://www.cs.manchester.ac.uk/study/postgraduate-research/research-projects/">website</A>.
-</P>
 
-<h4>Academic Services and Activities</h4>
+<h4>Services and Activities</h4>
 <p><ul>
    <li style="margin-bottom:5px">Member of AMS Network on Neurosymbolic AI for Medicine (2024 - )</li>
     <li style="margin-bottom:5px">Membership of EPSRC Peer Review College (2023 - )</li>
     <li style="margin-bottom:5px">Associate Editor of Transactions on Graph Data and Knowledge (TGDK) (2023 - ).</li>
-    <li style="margin-bottom:5px">Editor of Data Intelligence (2021 - ).</li>
-    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 - ). </li>
-<li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 - 2023).</li>
+    <li style="margin-bottom:5px">Editor Board of Data Intelligence (2021 - ).</li>
+    <li style="margin-bottom:5px">Editor Board of Journal of Web Semantics (2020 - 2023).</li>
+    <li style="margin-bottom:5px">Co-organiser of the OAEI Track <A href="https://www.cs.ox.ac.uk/isg/projects/ConCur/oaei/">"Bio-ML: A ML-friendly Biomedical track for Equivalence and Subsumption Matching"</A> in ISWC (2022 - 2024). </li>
 <li style="margin-bottom:5px">Co-organiser of <A href="/isg/challenges/sem-tab/">SemTab: Semantic Web Challenge on Tabular Data to Knowledge Graph Matching</A> which is in conjunction with International Semantic Web Conference (2019 - 2023).</li>
 <li style="margin-bottom:5px">Co-chair of Semantic Web Challenge Chair of ISWC'21.</li>
     <li style="margin-bottom:5px">PC/SPC of ISWC, The Web Conference (WWW), AAAI, IJCAI, ESWC, CIKM, ACL, etc.</li>
-</ul></p>
-<p>&nbsp  &nbsp  &nbsp See my <a href="./files/CV_Jiaoyan.pdf">CV</a> for more I have served.</p>
 
-<h4> Industrial Activities</h4>
-<p><ul>
     <li style="margin-bottom:5px">Associate member of <A href="https://sirius-labs.no/data-science/">SIRIUS Centre for Scalable Data Access </A> in Norway. (11/2017 - 12/2023) </li>
 <li style="margin-bottom:5px">Consultant on knowledge graph construction (in collaboration with Xi Chen), Jarvis Lab of Tencent Technology, Shenzhen, China. (03/2020 - 02/2021)</li>
 <li style="margin-bottom:5px">Consultant, Oxford Semantic Technology, Oxford, UK. (12/2019 - 02/2020)</li>
@@ -156,8 +156,8 @@ Research Interests
     <li style="margin-bottom:5px">Hui Yang (Postdoctoral, Department of Computer Science, The University of Manchester, 06/2024 - )</li>
     <li style="margin-bottom:5px">Hanhua Hong (PhD, Department of Computer Science, The University of Manchester, 09/2024 - )</li>
     <li style="margin-bottom:5px">Yiping Song (PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
-    <li style="margin-bottom:5px">Ian Hyland (part-time PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
-   <!-- <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - now) (external co-supervisor)</li> -->
+    <li style="margin-bottom:5px">Ian Hyland (half-time PhD, Department of Computer Science, The University of Manchester, 04/2024 - )</li>
+   <li style="margin-bottom:5px">Balazs Mosolygo (PhD, Department of Information Science and Media Studies, University of Bergen, 11/2023 - ) (external co-supervisor)</li>
     <li style="margin-bottom:5px">Zhenyu Wu (PhD, Department of Computer Science, The University of Manchester, 09/2022 - )</li>
     <li style="margin-bottom:5px">Tianzhe Zhao (Visiting PhD from Xi'an Jiaotong University, 01/2024 - )</li>
     <li style="margin-bottom:5px">Jingchuan Shi (PhD, Department of Computer Science, University of Oxford, 2021 - )</li>
